@@ -16,7 +16,7 @@ A simple './configure && make' should build the referencer executable, if the de
 
 The build dependencies are:
 	g++
-	poppler
+	poppler-glib
 	gtkmm-2.4
 	libgnomeuimm-2.6 
 	gnome-vfsmm-2.6
@@ -26,12 +26,10 @@ The build dependencies are:
 	intltool
 
 On Ubuntu 6.10 (or 6.04 LTS), all of these may be obtained by running the following command:
-	sudo apt-get install build-essential libpoppler-dev libgtkmm-2.4-dev libgnomeuimm-2.6-dev libgnome-vfsmm-2.6-dev libglademm-2.4-dev libgconfmm-2.6-dev libboost-regex-dev intltool
+	sudo apt-get install build-essential libpoppler-glib-dev libgtkmm-2.4-dev libgnomeuimm-2.6-dev libgnome-vfsmm-2.6-dev libglademm-2.4-dev libgconfmm-2.6-dev libboost-regex-dev intltool
 	
 (note that libboost-regex-dev is in the 'universe' repository, which is not enabled in a default Ubuntu install.  See https://help.ubuntu.com/ubuntu/desktopguide/C/extra-repositories.html)
 
-
-NOTE TO FEDORA USERS: Unfortuately the poppler interface used in Referencer is not supported in the fedora poppler development packages -- to build Referencer it is necessary to separately download poppler source packages, and edit the Referencer Makefile to find this directory.  Note that the binary library itself is fine on Fedora, it's just the headers that are problematic, so once it is built it can be distributed without problems.
 On Fedora Core 5, you will need to do:
 	yum install gtkmm24-devel libgnomeuimm26-devel gnome-vfsmm26-devel libglademm24-devel gconfmm26-devel poppler-devel gcc-c++ boost-devel
 
@@ -50,3 +48,4 @@ The wvConvertUnicodeToLaTeX function is based on the function of the same name i
 The eel_* functions are copied from libeel, Copyright © 2000 Eazel, Inc.
 The art_rgb_run_alpha function is copied from libart, Copyright © Raph Levien 1998
 The thumbnail_frame.png graphic is copied from Nautilus, Copyright © 2003 Redhat, Inc
+ucompose.hpp is from the string composition library, Copyright © 2003 Ole Laursen, licensed under the LGPL
