@@ -69,7 +69,7 @@
 	<p>If there isn't yet a package for your distribution, you'll need to compile referencer from source.  Referencer has a number of dependencies (see README in the tarball for more details):</p>
 	<ul>
 	<li>g++</li>
-	<li>poppler</li>
+	<li>poppler-glib</li>
 	<li>gtkmm-2.4</li>
 	<li>libgnomeuimm-2.6</li>
 	<li>gnome-vfsmm-2.6</li>
